# external-dns-routeros-provider

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev.template.py  go.mod  go.sum  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: publish.yaml
cmd/provider/: provider.go
dev/: create.sh  dev.go.template  metallb.yaml  records.yaml
dev/manifests/external-dns/: kustomization.yaml
external_dns_mikrotik_webhook/: cli.py  logs.py  mikrotik.py  provider.py  webhook.py
internal/e2e/: main_test.go
internal/provider/: client.go  embed.go  main.go  provider.go  server.go
local/: .env.template  .gitignore
manifests/: example-deployment.yaml
scripts/: dev.sh  docker.sh  helpers.py
tests/: .gitignore  common.py  test_mikrotik.py  test_provider.py
