[project]
name = "external-dns-mikrotik-webhook"
version = "0.0.4"
dependencies = [
    "click",
    "fastapi",
    "pydantic",
    "pykrotik==0.0.7",
    "uvloop",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "python-dotenv
]

[project.scripts]
external-dns-mikrotik-webhook = "external_dns_mikrotik_webhook.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[tool.setuptools.packages.find]
include = ["external_dns_mikrotik_webhook"]