[project]
name = "external-dns-mikrotik-webhook"
version = "0.0.0"
dependencies = [
    "click",
    "fastapi",
    "pydantic",
    "pykrotik==0.0.7",
    "uvloop",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "packaging",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "python-semantic-release",
    "toml"
]

[project.scripts]
external-dns-mikrotik-webhook = "external_dns_mikrotik_webhook.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.setuptools.packages.find]
include = ["external_dns_mikrotik_webhook"]