[project]
name = "external-dns-mikrotik-webhook"
version = "0.0.0"
dependencies = [
    "click",
    "fastapi",
    "pydantic",
    "pykrotik==0.0.7",
    "uvloop",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "black"
]

[project.scripts]
external-dns-mikrotik-webhook = "external_dns_mikrotik_webhook.cli:main"

[tool.setuptools.packages.find]
include = ["external_dns_mikrotik_webhook"]